app/namespace.yaml
# Создаю отдельное пространство
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin-test
  labels:
    purpose: mind-testing
